<resources>
    //inicio de sesión
    <string name="app_name">Lazo</string>
    <string name="correo">Correo</string>
    <string name="contrasenha">Contraseña</string>
    <string name="btnIngresar">INGRESA</string>
    <string name="registrate">Crear cuenta</string>

    //registrar cuenta
    <string name="regNombre">Nombre</string>
    <string name="regApellido">Apellido</string>
    <string name="repContrasenha"> Reingrese contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="direccionAcopio">Centro de acopio</string>
    <string name="descripcion_fundacion">Descripción de la fundación</string>
    <string name="btnRegistrar">REGISTRARSE</string>

    <string name="fundacionSwitch">Fundación</string>
    <string name="donadorSwitch">Donador</string>

    //menu
    <string name="btnHome">Home</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnDonar">Donar</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnPerfil">Perfil</string>

    //barra lateral
    <string name="nosotros">Sobre nosotros</string>
    <string name="contacto">Contacta con el equipo</string>
    <string name="terminos">Términos y condiciones</string>
    <string name="logout">Cerrar sesión</string>

    <string name="drawer_open">Drawerabierto</string>
    <string name="drawer_close">Drawercerrado</string>

    //item producto
    <string name="nombre_producto">Nombre del producto</string>
    <string name="agregar_producto">Agregar</string>
    <string name="producto_listo">Listo</string>

    //item recycler
    <string name="categoria_fundacion">Categoría</string>
    <string name="nombre_fundacion">Nombre</string>

    //menu de cuentas consultadas
    <string name="reportar">Reportar</string>
    <string name="seguir">Seguir</string>

    //fragmento perfil: usuario estandar
    <string name="nombre_cuenta">Nombre cuenta</string>
    <string name="correo_cuenta">Correo cuenta</string>
    <string name="contrasenha_cuenta">Contraseña cuenta</string>
    <string name="telefono_cuenta">Teléfono cuenta</string>
    <string name="editar_perfil">Editar perfil</string>


    //item detalle del producto
    <string name="tomar_foto">Tomar foto</string>
    <string name="descripcion_producto">Descripción del producto</string>


</resources>