<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nosotros"
            android:icon="@drawable/info"
            android:title="@string/nosotros" />
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/contacto"
            android:title="@string/contacto" />
        <item
            android:id="@+id/terminos"
            android:icon="@drawable/terminos"
            android:title="@string/terminos" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>
