<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/lazo_fondo"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/cuadro_de_texto"
             android:orientation="vertical"
             android:padding="24dp">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Inicio de sesión"
                 android:textSize="30sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"/>

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/login_correo"
                 android:background="@drawable/cuadro_de_texto"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
                 android:hint="@string/correo"
                 android:textColor="@color/black"/>

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/login_contrasenha"
                 android:background="@drawable/cuadro_de_texto"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
                 android:hint="@string/contrasenha"
                 android:textColor="@color/black"/>

             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="INGRESA"
                 android:id="@+id/boton_iniciosesion"
                 android:textSize="18dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/lavender"
                 app:cornerRadius = "20dp"
                 android:hint="@string/btnIngresar"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/registro"
                 android:text="Si no tienes una cuenta registrate"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/lavender"
                 android:textSize="15dp"/>

         </LinearLayout>

     </androidx.cardview.widget.CardView>

</LinearLayout>